# Mash

./: CMakeLists.txt  Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  README.md  SourceCode.msh  SourceCode.txt  Tokenizer.cpp  Tokenizer.h  ast.txt  main.cpp  run_tests.bat  run_tests.sh  tokens.txt
.github/workflows/: run-tests.yml
documentation/: Syntax.md
func/ValidateDataType/: ValidateDataType.cpp
func/consume/: consume.cpp
func/evaluateBody/: evaluateBody.cpp
func/evaluateCondition/: evaluateCondition.cpp
func/evaluateExpression/: evaluateExpression.cpp
func/evaluateExpressionForPrint/: evaluateExpressionForPrint.cpp
func/getInput/: getInput.cpp
func/getPrecedence/: getPrecedence.cpp
func/getVariableValue/: getVariableValue.cpp
func/hasCorrectExtension/: hasCorrectExtension.cpp  hasCorrectExtension.h
func/parseBody/: parseBody.cpp
func/parseCondition/: parseCondition.cpp
func/parseExpression/: parseExpression.cpp
func/parseFuncBody/: parseFuncBody.cpp
func/parseInput/: parseInput.cpp
func/parseRight/: parseRight.cpp
func/parseTerm/: parseTerm.cpp
func/peek/: peek.cpp
func/performArithmetic/: performArithmetic.cpp
func/readFile/: readFile.cpp  readFile.h
func/setVariableValue/: setVariableValue.cpp
structs/: ASTNode.h  Token.h
tests/: test1.msh  test1.out
